notebook per rq

--- a/01-DatasetCollection-KaggleDownload.ipynb
+++ b/01-DatasetCollection-KaggleDownload.ipynb
@@ -17,9 +17,9 @@
     "    - Set the variables `KAGGLE_USERNAME` and `KAGGLE_KEY` or put the file in `~/.kaggle/kaggle.json`.\n",
     "- Datasets are retrieved across multiple pages of the Kaggle API and filtered to include only **public datasets**.  \n",
     "- Each dataset is downloaded and extracted into the local directory:  \n",
-    "  - `./kaggledatasets`  \n",
+    "  - `./dataset_kaggle`  \n",
     "\n",
-    "⚠️ **Note:** The exact datasets retrieved depend on the **time of download** and Kaggle’s dataset availability. The `kaggledatasets.7z` dataset is provided for reproducibility.\n",
+    "⚠️ **Note:** The exact datasets retrieved depend on the **time of download** and Kaggle’s dataset availability. The `dataset_kaggle.7z` dataset is provided for reproducibility.\n",
     "\n",
     "---\n"
    ]
@@ -63,7 +63,7 @@
     "import kaggle\n",
     "import pandas as pd\n",
     "\n",
-    "dataset_directory = './kaggledatasets'\n",
+    "dataset_directory = './dataset_kaggle'\n",
     "\n",
     "# creating a df that contains datasets\n",
     "datasets_list_csv = []\n",
