--- a/02-DatasetCollection-KaggleImport.ipynb
+++ b/02-DatasetCollection-KaggleImport.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_directory = './kaggledatasets'"
+    "dataset_directory = './dataset_kaggle'"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "source": [
     "dataset_sequences_200 = kaggle_import(dataset_directory)\n",
     "static_array_size(dataset_sequences_200, 200)\n",
-    "save_pickle(dataset_sequences_200, 'dataset_sequences_200')"
+    "save_pickle(dataset_sequences_200, 'sequences_dataset/dataset_sequences_200')"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "source": [
     "dataset_sequences_10k = kaggle_import(dataset_directory)\n",
     "truncate_array_size(dataset_sequences_10k, 10000)\n",
-    "save_pickle(dataset_sequences_10k, 'dataset_sequences_10k')"
+    "save_pickle(dataset_sequences_10k, 'sequences_dataset/dataset_sequences_10k')"
    ]
   },
   {
@@ -210,8 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_csv(dataset_sequences_200, 'dataset_sequences_200')\n",
-    "save_csv(dataset_sequences_10k, 'dataset_sequences_10k')"
+    "save_csv(dataset_sequences_200, 'sequences_dataset/dataset_sequences_200')\n",
+    "save_csv(dataset_sequences_10k, 'sequences_dataset/dataset_sequences_10k')"
    ]
   }
  ],
