--- a/03-RQ1-FeasibilityStudy.ipynb
+++ b/03-RQ1-FeasibilityStudy.ipynb
@@ -10,7 +10,16 @@
     "\n",
     "This notebook performs the training, hyperparameter optimization, and evaluation of the feasibility neural network model for predicting the most comparison-efficient sorting algorithm.\n",
     "\n",
-    "The **input file** is `dataset_training_200.csv` (containing presortedness features and labels).\n",
+    "- The **most comparison-efficient sorting algorithm** for each sequence is determined, serving as the target label.  \n",
+    "- As input features, the **presortedness metrics** are computed across the entire sequence for all five metrics under consideration.\n",
+    "- The **number of comparisons required** is not taken into account in this setting, as the primary objective is to demonstrate that sorting algorithms can be predicted from presortedness metrics alone.  \n",
+    "\n",
+    "The **input file** is:  \n",
+    "- the `dataset_sequences/dataset_sequences_200.pkl` containing the raw sequences.\n",
+    "\n",
+    "The **output files** computed by this notebook are:  \n",
+    "- the `rq1_dataset/dataset_training_rq1_200.csv` containing presortedness features and labels.\n",
+    "- the `rq1_model/model_rq1...` the best model.\n",
     "\n",
     "---"
    ]
@@ -19,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements"
+    "## Requirements\n",
+    "\n",
+    "Installs the exact version of packages required for this notebook into the current Jupyter kernel."
    ]
   },
   {
@@ -39,10 +50,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create Dataset for Training, Validation, and Test\n",
+    "\n",
+    "In order to train the model, it is necessary to determine the **most comparison-efficient sorting algorithm** (*Introsort*, *Insertionsort*, *Mergesort*, *Timsort*, *Quicksort*) for each sequence, which serves as the target label. As input features, we employ the **sampled presortedness metrics** (*Runs*, *Deletions*, *Inversions*, and *Inversion Distance*).  \n",
+    "\n",
+    "For the evaluation of the model, we additionally record the **number of comparisons required** to compute the presortedness metrics, as this reflects the computational overhead associated with feature extraction.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "from intellisorts_training_set import *\n",
+    "\n",
+    "dataset_path = 'dataset_sequences/dataset_sequences_200.pkl'\n",
+    "\n",
+    "print(f\"Loading sequences {dataset_path} ...\")\n",
+    "\n",
+    "with open(dataset_path, 'rb') as f:\n",
+    "    dataset_200_dfs = pickle.load(f)\n",
+    "\n",
+    "print(\"Sequences loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RQ1 full array presortedness\n",
+    "df_results = compute_training_data_extended(\n",
+    "    dataset_dfs = dataset_200_dfs,\n",
+    "    min_length = 200,\n",
+    "    max_length = 200,\n",
+    "    sampling_strategy = sampling_strategy_identity,\n",
+    "    sample_size = 200\n",
+    ")\n",
+    "\n",
+    "print(\"Dataset D200:\", len(df_results))\n",
+    "df_results.to_csv('rq1_dataset/dataset_training_rq1_200.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train and Evaluate Neural Network Model\n",
     "\n",
-    "1. Grid search\n",
-    "2. Algorithm Prediction Summary: Compares the **actual vs. predicted counts** for each sorting algorithm in the test set and reports the number of **true positives** per class."
+    "Model training including hyperparameter optimization in a grid search. Finally, shows an algorithm prediction summary that compares the **actual vs. predicted counts** for each sorting algorithm in the test set and reports the number of **true positives** per class."
    ]
   },
   {
@@ -56,10 +118,10 @@
     "from intellisorts_model_training import grid_search\n",
     "\n",
     "# load training dataset\n",
-    "df_results = pd.read_csv('dataset_training_200.csv')\n",
+    "df_results = pd.read_csv('rq1_dataset/dataset_training_rq1_200.csv')\n",
     "\n",
     "# features\n",
-    "train_input = df_results[['Inversions', 'Deletions', 'Runs', 'Dis']]\n",
+    "train_input = df_results[['Inversions', 'Deletions', 'Runs', 'InversionDistance']]\n",
     "train_output = df_results['Algorithm']\n",
     "\n",
     "# perform grid search\n",
@@ -79,7 +141,7 @@
     "    test_true_algorithms,\n",
     "    test_predicted_algorithms\n",
     ") = grid_search(\n",
-    "    'model_rq1',\n",
+    "    'rq1_model/model_rq1',\n",
     "    train_input,\n",
     "    train_output,\n",
     "    param_grid\n",
@@ -90,8 +152,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Average Comparisons Analysis\n",
     "\n",
     "This section evaluates the **average number of comparisons** required by:\n",
@@ -100,9 +160,7 @@
     "- The **prediction model**\n",
     "- The classical sorting algorithms (Timsort, Merge Sort, Insertion Sort, Introsort, Quick Sort)\n",
     "\n",
-    "The results are visualized on a logarithmic scale to account for big differences in magnitude\n",
-    "\n",
-    "---"
+    "The results are visualized on a logarithmic scale to account for big differences in magnitude"
    ]
   },
   {
@@ -122,20 +180,20 @@
     "t = []\n",
     "\n",
     "for index, row in test_set_df.iterrows():\n",
-    "    c.append(row[test_predicted_algorithms[index]])\n",
-    "    t.append(row[test_true_algorithms[index]])\n",
-    "\n",
-    "def calculate_average(column_name):\n",
-    "    return round(np.sum(test_set_df[column_name]) / len(test_set_df), 1)\n",
+    "    c.append(row[test_predicted_algorithms[index] + \"_Comparisons\"])\n",
+    "    t.append(row[test_true_algorithms[index] + \"_Comparisons\"])\n",
     "\n",
     "minimum_possible = round(np.sum(t)/len(test_set_df), 1)\n",
     "algorithm_prediction_model = round(np.sum(c)/len(test_set_df), 1)\n",
     "\n",
-    "merge_sort_avg = calculate_average('merge_sort')\n",
-    "timsort_avg = calculate_average('timsort')\n",
-    "introsort_avg = calculate_average('introsort')\n",
-    "quick_sort_avg = calculate_average('quick_sort')\n",
-    "insertion_sort_avg = calculate_average('insertion_sort')\n",
+    "def calculate_average(column_name):\n",
+    "    return round(np.sum(test_set_df[column_name]) / len(test_set_df), 1)\n",
+    "\n",
+    "merge_sort_avg = calculate_average('Mergesort_Comparisons')\n",
+    "timsort_avg = calculate_average('Timsort_Comparisons')\n",
+    "introsort_avg = calculate_average('Introsort_Comparisons')\n",
+    "quick_sort_avg = calculate_average('Quicksort_Comparisons')\n",
+    "insertion_sort_avg = calculate_average('Insertionsort_Comparisons')\n",
     "\n",
     "data = {\n",
     "    'Algorithm': ['Optimal', 'Predicted','Timsort', 'Mergesort', 'Insertionsort', 'Introsort', 'Quicksort'],\n",
