--- a/06-RQ4-PerformanceEvaluation-FinalModel.ipynb
+++ b/06-RQ4-PerformanceEvaluation-FinalModel.ipynb
@@ -10,7 +10,12 @@
     "\n",
     "This notebook performs the training, hyperparameter optimization, and evaluation of the final neural network model for predicting the most comparison-efficient sorting algorithm.\n",
     "\n",
-    "The **input file** is `dataset_training_400p.csv` (containing presortedness features and labels).\n",
+    "The **input file** is:  \n",
+    "- the `dataset_sequences/dataset_sequences_10k.pkl` containing the raw sequences.\n",
+    "\n",
+    "The **output files** computed by this notebook are:  \n",
+    "- the `rq4_dataset/dataset_training_rq4_400p.csv` containing presortedness features and labels.\n",
+    "- the `rq4_model/model_rq4...` the **final model**.\n",
     "\n",
     "---"
    ]
@@ -19,7 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements"
+    "## Requirements\n",
+    "\n",
+    "Installs the exact version of packages required for this notebook into the current Jupyter kernel."
    ]
   },
   {
@@ -40,7 +47,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train and Evaluate Neural Network Model"
+    "## Create Datasets for Training, Validation, and Test\n",
+    "\n",
+    "In order to train the model, it is necessary to determine the **most comparison-efficient sorting algorithm** (*Insertionsort*, *Mergesort*, *Timsort*) for each sequence, which serves as the target label. As input features, we employ the **sampled presortedness metrics** (*Runs* and *Deletions*).  \n",
+    "\n",
+    "For the evaluation of the model, we additionally record the **number of comparisons required** to compute the presortedness metrics, as this reflects the computational overhead associated with feature extraction.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "from intellisorts_training_set import *\n",
+    "\n",
+    "dataset_path = 'dataset_sequences/dataset_sequences_10k.pkl'\n",
+    "\n",
+    "print(f\"Loading sequences {dataset_path} ...\")\n",
+    "\n",
+    "with open(dataset_path, 'rb') as f:\n",
+    "    dataset_10k_dfs = pickle.load(f)\n",
+    "\n",
+    "print(\"Sequences loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RQ4 sampling for final model\n",
+    "df_results = compute_training_data(\n",
+    "    dataset_dfs = dataset_10k_dfs,\n",
+    "    min_length = 400,\n",
+    "    max_length = 10000,\n",
+    "    sampling_strategy = sampling_strategy_hybrid,\n",
+    "    sample_size = 40\n",
+    ")\n",
+    "\n",
+    "print()\n",
+    "print(\"Dataset D400+:\", len(df_results))\n",
+    "df_results.to_csv('rq4_dataset/dataset_training_rq4_400p.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train and Evaluate Neural Network \n",
+    "\n",
+    "Model training including hyperparameter optimization in a grid search. Finally, shows an algorithm prediction summary that compares the **actual vs. predicted counts** for each sorting algorithm in the test set and reports the number of **true positives** per class."
    ]
   },
   {
@@ -54,18 +116,18 @@
     "from intellisorts_model_training import grid_search\n",
     "\n",
     "# load training dataset\n",
-    "df_results = pd.read_csv('dataset_training_400p.csv')\n",
+    "df_results = pd.read_csv('rq4_dataset/dataset_training_rq4_400p.csv')\n",
     "\n",
     "# features\n",
-    "train_input = df_results[['deletions_val_distStatic', 'runs_val_distStatic','arr_len']]\n",
+    "train_input = df_results[['Deletions', 'Runs','SequenceLength']]\n",
     "train_output = df_results['Algorithm']\n",
     "\n",
     "# perform grid search\n",
     "param_grid = {\n",
     "    'batch_size': [512],\n",
     "    'epochs': [500],\n",
-    "    'layers': [6],\n",
-    "    'layersize': [8]\n",
+    "    'layers': [0,1,2,3,4,5,6,7,8,9,10],\n",
+    "    'layersize': [1,2,3,4,5,6,7,8,9,10]\n",
     "}\n",
     "\n",
     "(\n",
@@ -77,26 +139,22 @@
     "    test_true_algorithms,\n",
     "    test_predicted_algorithms\n",
     ") = grid_search(\n",
-    "    'model_rq4',\n",
+    "    'rq4_model/model_rq4',\n",
     "    train_input,\n",
     "    train_output,\n",
     "    param_grid\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Analysis of Misclassifications\n",
     "\n",
     "This section examines the model’s errors by comparing the **true labels** with the **predicted labels** for the test set.\n",
     "\n",
-    "The figure visualizes, for each misclassified sequence, the number of comparisons associated with the true algorithm (left bar) and the predicted algorithm (right bar).\n",
-    "\n",
-    "---"
+    "The figure visualizes, for each misclassified sequence, the number of comparisons associated with the true algorithm (left bar) and the predicted algorithm (right bar)."
    ]
   },
   {
@@ -140,8 +198,8 @@
     "\n",
     "print(\"number of missclassifications: \" + str(len(missclassified_df)))\n",
     "\n",
-    "missclassified_df[\"f\"] = missclassified_df.apply(lambda row: row[row[\"y_pred\"]], axis=1)\n",
-    "missclassified_df[\"t\"] = missclassified_df.apply(lambda row: row[row[\"Algorithm\"]], axis=1)\n",
+    "missclassified_df[\"f\"] = missclassified_df.apply(lambda row: row[row[\"y_pred\"] + \"_Comparisons\"], axis=1)\n",
+    "missclassified_df[\"t\"] = missclassified_df.apply(lambda row: row[row[\"Algorithm\"] + \"_Comparisons\"], axis=1)\n",
     "\n",
     "missclassified_df[\"abs_diff\"] = missclassified_df[\"f\"] - missclassified_df[\"t\"]\n",
     "\n",
@@ -164,8 +222,8 @@
     "ax.set_xticks(missclassified_df.index[::2])\n",
     "\n",
     "legend_labels = {\n",
-    "    \"merge_sort\": \"Merge Sort\",\n",
-    "    \"insertion_sort\": \"Insertion Sort\",\n",
+    "    \"merge_sort\": \"Mergesort\",\n",
+    "    \"insertion_sort\": \"Insertionsort\",\n",
     "    \"timsort\": \"Timsort\"\n",
     "}\n",
     "\n",
@@ -180,7 +238,6 @@
     "ax.set_ylabel(\"Comparisons\")\n",
     "\n",
     "plt.rc('font', size=24)  # only applies on a second run\n",
-    "plt.savefig(\"MissclassifiedAlgos(4.7).svg\", format='svg')\n",
     "plt.show()"
    ]
   },
@@ -188,8 +245,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Best Model Predictions Compared to Timsort\n",
     "\n",
     "This section highlights the **largest improvements** achieved by the model relative to Timsort.\n",
@@ -197,9 +252,7 @@
     "\n",
     "The figure presents a side-by-side comparison for each selected sequence:  \n",
     "- The **left bar** (blue) shows the number of comparisons required by Timsort.  \n",
-    "- The **right bar** (colored by algorithm type) shows the number of comparisons required by the model’s predicted algorithm.\n",
-    "\n",
-    "---"
+    "- The **right bar** (colored by algorithm type) shows the number of comparisons required by the model’s predicted algorithm."
    ]
   },
   {
@@ -209,7 +262,7 @@
    "outputs": [],
    "source": [
     "# Calculate absolute difference between \"y_pred\" column and \"timsort\"\n",
-    "test_set_df[\"difference\"] = np.abs(test_set_df[\"timsort\"] - test_set_df.apply(lambda row: row[row[\"y_pred\"]], axis=1))\n",
+    "test_set_df[\"difference\"] = np.abs(test_set_df[\"Timsort_Comparisons\"] - test_set_df.apply(lambda row: row[row[\"y_pred\"] + \"_Comparisons\"], axis=1))\n",
     "\n",
     "# Select the 20 rows with the largest difference\n",
     "test_df_15 = test_set_df.nlargest(15, \"difference\").copy()\n",
@@ -217,11 +270,11 @@
     "\n",
     "test_df_15.drop(columns=[\"difference\"], inplace=True)\n",
     "\n",
-    "test_df_15[\"f\"] = test_df_15.apply(lambda row: row[row[\"y_pred\"]], axis=1)\n",
+    "test_df_15[\"f\"] = test_df_15.apply(lambda row: row[row[\"y_pred\"] + \"_Comparisons\"], axis=1)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
     "\n",
-    "ax.bar(test_df_15.index - 0.2, test_df_15[\"timsort\"], width=0.4, color=[color_map[\"timsort\"]])\n",
+    "ax.bar(test_df_15.index - 0.2, test_df_15[\"Timsort_Comparisons\"], width=0.4, color=[color_map[\"Timsort\"]])\n",
     "\n",
     "ax.bar(test_df_15.index + 0.2, test_df_15[\"f\"], width=0.4, \n",
     "       color=[color_map[alg] for alg in test_df_15[\"y_pred\"]])\n",
@@ -230,13 +283,10 @@
     "    for alg in unique_algorithms]\n",
     "\n",
     "ax.legend(handles=legend_patches, loc=\"upper left\")\n",
-    "\n",
     "ax.set_xlabel(\"Index\")\n",
     "ax.set_ylabel(\"Comparisons\")\n",
-    "# ax.set_title(\"Timsort (left) vs Predicted Algorithms (right) - Biggest Improvements\")\n",
     "\n",
     "plt.rc('font', size=24)  # only applies on a second run\n",
-    "plt.savefig(\"BestPredictions(4.7).svg\", format='svg')\n",
     "plt.show()"
    ]
   },
@@ -244,13 +294,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Algorithm Prediction Summary\n",
     "\n",
-    "This section compares the **actual vs. predicted counts** for each sorting algorithm in the test set and reports the number of **true positives** per class.\n",
-    "\n",
-    "---\n"
+    "This section compares the **actual vs. predicted counts** for each sorting algorithm in the test set and reports the number of **true positives** per class."
    ]
   },
   {
@@ -262,9 +308,9 @@
     "actual_counts = test_set_df[\"Algorithm\"].value_counts()\n",
     "predicted_counts = test_set_df[\"y_pred\"].value_counts()\n",
     "\n",
-    "correct_merge_count = ((test_set_df[\"y_pred\"] == \"merge_sort\") & (test_set_df[\"Algorithm\"] == \"merge_sort\")).sum()\n",
-    "correct_insertion_count = ((test_set_df[\"y_pred\"] == \"insertion_sort\") & (test_set_df[\"Algorithm\"] == \"insertion_sort\")).sum()\n",
-    "correct_timsort_count = ((test_set_df[\"y_pred\"] == \"timsort\") & (test_set_df[\"Algorithm\"] == \"timsort\")).sum()\n",
+    "correct_merge_count = ((test_set_df[\"y_pred\"] == \"Mergesort\") & (test_set_df[\"Algorithm\"] == \"Mergesort\")).sum()\n",
+    "correct_insertion_count = ((test_set_df[\"y_pred\"] == \"Insertionsort\") & (test_set_df[\"Algorithm\"] == \"Insertionsort\")).sum()\n",
+    "correct_timsort_count = ((test_set_df[\"y_pred\"] == \"Timsort\") & (test_set_df[\"Algorithm\"] == \"Timsort\")).sum()\n",
     "\n",
     "summary_table = pd.DataFrame({\n",
     "    \"Actual Count\": actual_counts,\n",
@@ -281,8 +327,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Overall Model Performance Relative to Timsort\n",
     "\n",
     "This figure places the model’s performance into context by comparing it with baseline and reference values:  \n",
@@ -290,9 +334,7 @@
     "- **Timsort** serves as the baseline and is normalized to 100%.  \n",
     "- **Best possible** represents the theoretical lower bound always choosing the most comparison efficient sorting algorithm.  \n",
     "- **Model** reflects the performance of the final neural network model.\n",
-    "- The **overhead of presortedness calculation** is displayed separately as an orange bar stacked on top of the model’s prediction cost.  \n",
-    "\n",
-    "---"
+    "- The **overhead of presortedness calculation** is displayed separately as an orange bar stacked on top of the model’s prediction cost.  "
    ]
   },
   {
@@ -339,16 +381,8 @@
     "ax.set_yticks(np.arange(0, 101, 20))\n",
     "\n",
     "plt.rc('font', size=20)  # only applies on a second run\n",
-    "plt.savefig(\"OverallPerformance.svg\", format='svg')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
